--- a/PartTemplateBox/MainWindow.xaml
+++ b/PartTemplateBox/MainWindow.xaml
@@ -11,12 +11,33 @@
     <Grid>
         <Grid.Resources>
             <Style TargetType="{x:Type local:FooControl}">
+                <Setter Property="ControlTemplateSelector">
+                    <Setter.Value>
+                        <local:FooControlTemplateSelector>
+                            <local:FooControlTemplateSelector.BoolTemplate>
+                                <ControlTemplate TargetType="{x:Type local:FooControl}">
+                                    <CheckBox Content="bool" />
+                                </ControlTemplate>
+                            </local:FooControlTemplateSelector.BoolTemplate>
 
+                            <local:FooControlTemplateSelector.StringTemplate>
+                                <ControlTemplate TargetType="{x:Type local:FooControl}">
+                                    <TextBox Text="text" />
+                                </ControlTemplate>
+                            </local:FooControlTemplateSelector.StringTemplate>
+                        </local:FooControlTemplateSelector>
+                    </Setter.Value>
+                </Setter>
 
-                <Setter Property="Template" Value="{Binding StringTemplate.Current, RelativeSource={RelativeSource Self}}" />
+                <Setter Property="Template" Value="{Binding ControlTemplateSelector.Current, RelativeSource={RelativeSource Self}}" />
             </Style>
         </Grid.Resources>
-        <local:FooControl />
-        <local:FooControl />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <local:FooControl x:Name="FooControl" Grid.Row="0"/>
+        <Button Grid.Row="1" Content="SwapTemplate" Click="OnSwapTemplateClick"></Button>
     </Grid>
 </Window>
