--- a/PartTemplateBox/MainWindow.xaml
+++ b/PartTemplateBox/MainWindow.xaml
@@ -14,17 +14,12 @@
                 <Setter Property="ControlTemplateSelector">
                     <Setter.Value>
                         <local:FooControlTemplateSelector>
-                            <local:FooControlTemplateSelector.BoolTemplate>
-                                <ControlTemplate TargetType="{x:Type local:FooControl}">
-                                    <CheckBox Content="bool" />
-                                </ControlTemplate>
-                            </local:FooControlTemplateSelector.BoolTemplate>
-
-                            <local:FooControlTemplateSelector.StringTemplate>
-                                <ControlTemplate TargetType="{x:Type local:FooControl}">
-                                    <TextBox Text="text" />
-                                </ControlTemplate>
-                            </local:FooControlTemplateSelector.StringTemplate>
+                            <ControlTemplate TargetType="{x:Type local:FooControl}">
+                                <CheckBox Content="bool" />
+                            </ControlTemplate>
+                            <ControlTemplate TargetType="{x:Type local:FooControl}">
+                                <TextBox Text="text" />
+                            </ControlTemplate>
                         </local:FooControlTemplateSelector>
                     </Setter.Value>
                 </Setter>
@@ -33,11 +28,13 @@
             </Style>
         </Grid.Resources>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <local:FooControl x:Name="FooControl" Grid.Row="0"/>
-        <Button Grid.Row="1" Content="SwapTemplate" Click="OnSwapTemplateClick"></Button>
+        <local:FooControl x:Name="FooControl" Grid.Row="0" />
+        <Button Grid.Row="1"
+                Click="OnSwapTemplateClick"
+                Content="SwapTemplate" />
     </Grid>
 </Window>
